# XuanYu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  docker-compose.yml
cmake/: XuanYuConfig.cmake.in  xuanyu.pc.in
docker/: Dockerfile  entrypoint.sh  gmssl.pc
docs/: agile-plan.md  design.md  detailed-design.md  project-status.md  user-stories.md
docs/interfaces/: ITransportAdapter.md
examples/: CMakeLists.txt  crypto_benchmark.cpp  crypto_demo.cpp  echo_client.cpp  echo_server.cpp
include/comm/: ITransportAdapter.h  TransportSocket.h
include/communication/: SecureBase.h  SecureClient.h  SecureServer.h
include/crypto/: CryptoSoftware.h  ICryptoProvider.h
include/protocol/: HandshakeContext.h  SecureBase.h  SecureClient.h  SecureServer.h
mvp/client/: CMakeLists.txt  Dockerfile.build  README-build.md  README.md  build.sh  release.sh
mvp/client/dts/dts_arm/: sg2002_licheea53nano_sd.dts
mvp/client/dts/partition/: partition_sd.xml
mvp/client/include/: AuthClient.h  FuncLib.h  HardwareAdapter.h  IHardware.h  sms4.h  trans.h
mvp/client/src/: AuthClient.cpp  HardwareAdapter.cpp  main.cpp  trans.c
plan/: US-001_create_project_structure.md  US-002_docker_test_env.md  US-003_define_ITransportAdapter.md  US-004_define_ICryptoProvider.md  US-005_define_SecureBase.md  US-006_unit_test_framework.md  US-007_transport_socket.md  US-008_connection_management.md  US-009_message_frame_handling.md  US-010_socket_tests.md  US-011_echo_demo.md  US-012_gmssl_integration.md  US-013_sm2_signature.md  US-014_sm2_key_exchange.md  US-015_sm3_kdf.md  US-016_sm4_encryption.md  US-017_crypto_tests.md  US-018_performance_benchmarks.md  US-019_handshake_state_machine.md  US-020_secure_client_handshake.md  US-021_secure_server_handshake.md  US-022_timeouts_retries.md  US-023_session_key_management.md  US-024_replay_protection.md  US-025_handshake_integration_tests.md  US-026_error_codes_and_logging.md  US-027_concurrency_limits.md  US-028_configuration_tuning.md  US-029_system_integration_tests.md  US-030_performance_optimization.md  US-031_docs_and_deployment.md  US-032_security_audit.md  US-033_application_protocol_adapters.md  US-034_protocol_fuzzing_tests.md
scripts/: build.sh  docker-run.sh
src/comm/: TransportSocket.cpp
src/communication/: SecureBase.cpp  SecureClient.cpp  SecureServer.cpp
src/crypto/: CryptoSoftware.cpp
src/protocol/: HandshakeContext.cpp  SecureBase.cpp  SecureClient.cpp  SecureServer.cpp
src/transport/: TransportSocket.cpp
tests/: CMakeLists.txt  placeholder.cpp
tests/comm/: test_transport_socket.cpp
tests/communication/: test_secure_client.cpp  test_secure_server.cpp
tests/crypto/: test_crypto_software.cpp  test_software_hardware_consistency.cpp
tests/mocks/: MockCryptoProvider.h  MockSecureClient.h  MockSecureServer.h  MockTransportAdapter.cpp  MockTransportAdapter.h
tests/transport/: test_transport_socket.cpp
